assign images height and width attributes and values in attempt to fix layout issue

--- a/style.css
+++ b/style.css
@@ -22,7 +22,6 @@
 }
 
 body {
-    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -83,8 +82,6 @@ a img {
 }
 
 .desktop-image {
-    width: auto;
-    max-height: 100%;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
 }
@@ -158,7 +155,7 @@ a img {
 
     .mobile-image {
         display: block;
-        width: 100%;
+        width: 344px;
         border-top-left-radius: 10px;
         border-top-right-radius: 10px;
     }
